...
        buttonType: 'plain',
        buttonStyle: { light: 'black', dark: 'white' },
      },
    },
    // placeholder: {
    //   cardNumber: '4242 4242 4242 4242',
    //   expiryDate: 'MM / YY',
    //   cvv: 'CVC',
    // },
    // redirectionInfo: 'hidden',
    // alwaysSendCustomerAcceptance: true,
    // paymentMethodsConfig: [{ paymentMethod: 'card', message: '' }, { paymentMethod: 'wallet', message: '' }],
    // opensCardScannerAutomatically: false,
    // paymentMethodOrder: ["apple_pay", "google_pay", "paypal", "samsung_pay", "credit", "klarna",],
...
